--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: install dependencies
-        run: apt-get update && export DEBIAN_FRONTEND=noninteractive && apt-get -y install --no-install-recommends cmake make gcc git
+        run: sudo apt-get update && export DEBIAN_FRONTEND=noninteractive && sudo apt-get -y install --no-install-recommends cmake make gcc git
         
       - name: clone google test
         run: git clone https://github.com/google/googletest
